# NeuralRobotics

./: .gitignore  README.md  pyproject.toml
generator/: .gitignore  index.html  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
generator/src/: App.tsx  index.tsx
generator/src/components/: Canvas.tsx  Header.tsx
outputs/circle/: rnn_circle_100.npz  rnn_circle_200.npz  rnn_circle_300.npz
outputs/eight/: rnn_eight_100.npz  rnn_eight_1000.npz  rnn_eight_200.npz  rnn_eight_300.npz  rnn_eight_400.npz  rnn_eight_500.npz  rnn_eight_600.npz  rnn_eight_700.npz  rnn_eight_800.npz  rnn_eight_900.npz
src/: circle.json  cli.py  double.json  eight.json  mtrnn.py  rnn.py  rnn_scratch.py
